--- a/chickens.html
+++ b/chickens.html
@@ -5,10 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> chicken </title>
 </head>
 
 <body>
+    <a href="about.html"> go to about</a>
+    <ul>
+        <li> silkie </li>
+        <li> silkie </li>
+        <li> silkie </li>
+    </ul>
+    
+    //lists above as bullet points
+    <ol>
+        <li> silkie </li>
+        <li> silkie </li>
+        <li> silkie </li>
+    </ol>
+    
+    //lists above as 1 - 4
 
 </body>
 
