--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title> About page </title>
 </head>
 <!-- CTRL+/ comments a line -->
@@ -18,6 +19,13 @@
     <img src = "/pictures/pic1.png">
     <img src = "https://1.bp.blogspot.com/-YHtBrQSz77w/X1icjNjxz_I/AAAAAAAAZJU/uOzyiRvzGa8zcm0fx5RPCY7pMTSfnArvgCLcBGAsYHQ/s1600/sailor-moon.jpg" alt = "sailormoon pic">
 <a href='https://en.wikipedia.org/wiki/Wolf' alt = 'Wolf wiki'> link </a>
+
+<div>
+<!-- div makes it be its own piece instead of it taking so much space vertically -->
+<span class="word">yes color</span>
+</div>
+
 </body>
+
 
 </html>
