creating semantics and tables

--- a/about.html
+++ b/about.html
@@ -11,20 +11,46 @@
 <!-- CTRL+/ comments a line -->
 <h3> this is h3</h3>
 <p> this is paragraph</p>
-<h2> this is h2</h2>
+<h2> this is<br> h2</h2>
+<!-- br breaks the line -->
 <b> this is bold</b>
 <p></p>
+
 <body>
+<main>
+    
     <a href = "chickens.html"> go to chicken</a>
     <img src = "/pictures/pic1.png">
     <img src = "https://1.bp.blogspot.com/-YHtBrQSz77w/X1icjNjxz_I/AAAAAAAAZJU/uOzyiRvzGa8zcm0fx5RPCY7pMTSfnArvgCLcBGAsYHQ/s1600/sailor-moon.jpg" alt = "sailormoon pic">
 <a href='https://en.wikipedia.org/wiki/Wolf' alt = 'Wolf wiki'> link </a>
 
+<!-- super scripts are elements above the base line -->
+<p>hello<sup>oooo</sup></p> 
+<!-- we can also created a linked super script -->
+<p>hello<sup><a href = "https://www.hulu.com/series/king-of-the-hill-
+    52b8dd8a-eff2-4ed2-9b8d-7c0039df1c53">oooo</a></sup></p>
+
+<!-- subcripts can go below the base -->
+<p>bye<sub>eeeee</sub></p>
+<p>bye<sub><a href="https://www.hulu.com/series/king-of
+    -the-hill-52b8dd8a-eff2-4ed2-9b8d-7c0039df1c53">eeee</a></sub>
+</p>
+
+
 <div>
 <!-- div makes it be its own piece instead of it taking so much space vertically -->
 <span class="word">yes color</span>
-</div>
 
+<hr>
+<!-- hr makes a line across -->
+
+<!-- Some Sematics types
+    : <section>, <article>, <nav>, <main>, 
+    <header>, <footer>, <aside>, <time>, <summary>, <details> -->
+</div>
+</main>
+<!-- this prints them all faster
+    main>section>header -->
 </body>
 
 
