--- a/chickens.html
+++ b/chickens.html
@@ -9,22 +9,30 @@
 </head>
 
 <body>
+    <main>
     <a href="about.html"> go to about</a>
+    <nav>
+        <li><a href="home"> HOME</a> </li>
+        <li><a href="about.html"> ABOUT</a> </li>
+        <li><a href="contact"> CONTACT</a> </li>
+
+    </nav>
+    <!-- nav element can be used on tabs -->
     <ul>
         <li> silkie </li>
         <li> silkie </li>
         <li> silkie </li>
     </ul>
     
-    //lists above as bullet points
+    <!-- lists above as bullet points -->
     <ol>
         <li> silkie </li>
         <li> silkie </li>
         <li> silkie </li>
     </ol>
     
-    //lists above as 1 - 4
-
+    <!-- //lists above as 1 - 4 -->
+</main>
 </body>
 
 </html>
